--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <h1>毎日の散歩に<br>ちょっとした楽しみを...</h1>
+<div class="main-container">
+  <h1>毎日の散歩に<br>ちょっとした楽しみを</h1>
   <div class="button-container">
     <button type="button" class="walk-now-btn">さっそく歩く</button>
     <button type="button" class="guest-login-btn">ゲストログイン</button>
