--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,7 +63,7 @@ button:hover {
   }
 }
 
-/* ヘッダー作成 */
+/* ヘッダー */
 .site-header {
   background-color: #fff;
   color: #000;
@@ -91,7 +91,6 @@ button:hover {
   color: inherit; /* 親要素の色を継承 */
 }
 
-/* リンクの各状態を指定 */
 .logo:link,
 .logo:visited,
 .logo:hover,
@@ -133,11 +132,18 @@ button:hover {
   margin: 2px 0;
 }
 
-/* フッダー作成 */
+
+.content {
+  flex: 1;
+}
+
+/* フッダー */
 footer {
   background-color: white;
   width: 100%;
   padding: 20px 0;
+  position: relative;
+  bottom: 0;
 }
 
 .footer-links {
@@ -156,4 +162,34 @@ footer {
 .footer-links a {
   color: black;
   text-decoration: none;
+}
+
+/* 新規登録 */
+.registration-form {
+  text-align: center;
+  width: 100%;
+  max-width: 400px;
+}
+
+.form-group {
+  margin-bottom: 12px;
+  text-align: left;
+}
+
+.form-control {
+  width: 100%;
+  padding: 15px;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+.btn-primary {
+  padding: 12px 100px;
+  background-color: #4169E1;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-top: 20px;
 }
