--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="registration-form">
   <h2>新規登録</h2>
-  <%= form_with model: @user, url: register_path, local: true do |form| %>
+  <%= form_with model: @user, url: signup_path, local: true do |form| %>
     <div class="form-group">
       <%= form.email_field :name, class: 'form-control', placeholder: '名前' %>
     </div>
