--- a/app/views/store_details/index.html.erb
+++ b/app/views/store_details/index.html.erb
@@ -1,15 +1,22 @@
-<button class="button" onclick="history.back()">←</button>
-<div class="section">
-  <h2><%= @store_name %></h2>
-  <p>徒歩 : <%= @walking_time %></p>
-  <p>営業状況 : <%= @business_status %></p>
-  <p>営業時間 : <%= @business_hours %></p>
-  <p>混雑状況 : <%= @waiting_time %></p>
-  <p>電話番号 : <%= @phone_number %></p>
-  <button class="button">このお店に行く</button>
+<div class="container">
+  <button class="store-details-back-btn" onclick="history.back()">←</button>
+  <div class="store-details-section">
+    <h2><%= @store_name %></h2>
+    <div class="store-details-text">
+      <p>徒歩 : <%= @walking_time %></p>
+      <p>営業状況 : <%= @business_status %></p>
+      <p>営業時間 : <%= @business_hours %></p>
+      <p>混雑状況 : <%= @waiting_time %></p>
+      <p>電話番号 : <%= @phone_number %></p>
+    </div>
+      <button class="store-details-btn">このお店に行く</button>
 
-  <div class="divider"></div>
+    <div class="divider"></div>
 
-  <input type="text" class="input-underline" placeholder="レビューを書く">
-  <button class="store_details-button">レビューを書く</button>
+    <div class="store-details-second-section">
+      <p>ユーザー名: <%= @user_name %></p>
+      <p class="review-text">テキスト: <%= @review_text %></p>
+      <button class="store-details-btn">レビューを書く</button>
+    </div>
+  </div>
 </div>
