--- a/app/views/store_details/index.html.erb
+++ b/app/views/store_details/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <button class="store-details-back-btn" onclick="history.back()">←</button>
+  <button class="store-details-back-btn">←</button>
   <div class="store-details-section">
     <h2><%= @store_name %></h2>
     <div class="store-details-text">
