--- a/app/views/store_details/index.html.erb
+++ b/app/views/store_details/index.html.erb
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div id="review-form" data-review-form-target="form" class="review-form" style="display: none;">
+<div id="review-form" class="review-form" data-review-form-target="form">
   <div class="review-form-content">
     <p>名前: <%= @user_name %></p>
     <p>レビュー:</p>
