--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -377,6 +377,22 @@ footer {
   width: 70%;
 }
 
+/* ホーム */
+#map {
+  height: 400px;
+  width: 60%;
+}
+
+#restaurant-list-container {
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 20px;
+  width: 60%;
+  margin-top: 20px;
+}
+
+/* レビュー */
 .review-text {
   border-bottom: 1px solid black;
 }
