--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -426,3 +426,59 @@ footer {
   margin-bottom: 10px;
   width: 100%;
 }
+
+/* ハンバーガーメニュー */
+.hamburger-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40%;
+  height: 100%;
+  background-color: white;
+  border-left: 1px solid #ccc;
+  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.hamburger-menu .close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 36px;
+  cursor: pointer;
+}
+
+.hamburger-menu ul {
+  list-style: none;
+  padding: 20px;
+  margin: 50px 0 0 0;
+}
+
+.hamburger-menu ul li {
+  padding: 10px 0;
+  border-bottom: 1px solid #000;
+  text-align: left;
+}
+
+.menu-link {
+  color: black;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+.menu-link:hover {
+  opacity: 0.8;
+}
+
+.menu-icon {
+  cursor: pointer;
+}
+
+.menu-icon-bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 4px 0;
+  background-color: #333;
+}
