--- a/app/views/store_details/index.html.erb
+++ b/app/views/store_details/index.html.erb
@@ -21,6 +21,8 @@
   </div>
 </div>
 
+<div class="overlay" data-review-form-target="overlay" data-action="click->review-form#close"></div>
+
 <div id="review-form" class="review-form" data-review-form-target="form">
   <div class="review-form-content">
     <p>名前: <%= @user_name %></p>
