--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -393,38 +393,34 @@ footer {
 }
 
 /* レビュー */
-.review-text {
-  border-bottom: 1px solid black;
-}
-
-.review-form {
+.overlay {
   display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 
-.review-form-content {
-  background-color: #fff;
+.overlay.active {
+  display: block;
+}
+
+.review-form {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 80%;
-  max-width: 500px;
+  z-index: 20;
 }
 
-.review-form-content p,
-.review-form-content textarea,
-.review-form-content select,
-.review-form-content input {
-  margin-bottom: 10px;
-  width: 100%;
+.review-form.active {
+  display: block;
 }
 
 /* ハンバーガーメニュー */
