--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -401,7 +401,7 @@ footer {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 1000; /* ヘッダーとフォームの上に表示されるようにz-indexを設定 */
+  z-index: 1000;
 }
 
 .overlay.active {
@@ -415,10 +415,10 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
   background: white;
-  padding: 30px; /* フォームの枠を大きくする */
+  padding: 30px;
   border-radius: 8px;
-  z-index: 1001; /* オーバーレイの上に表示されるようにz-indexを設定 */
-  width: 600px; /* フォームの幅を大きくする */
+  z-index: 1001;
+  width: 600px;
 }
 
 .review-form.active {
@@ -454,8 +454,8 @@ footer {
 .star {
   font-size: 24px;
   cursor: pointer;
-  color: #FFFFFF; /* 通常の星の色を白にする */
-  -webkit-text-stroke: 1px black; /* 星の周りを黒枠にする */
+  color: #FFFFFF;
+  -webkit-text-stroke: 1px black;
   margin-right: 5px;
   transition: color 0.3s;
 }
@@ -463,11 +463,11 @@ footer {
 .star:hover,
 .star.selected,
 .star.highlighted {
-  color: #FBBC04; /* 星の色を「#FBBC04」にする */
+  color: #FBBC04;
 }
 
 .review-form-content .form-group:last-child {
-  justify-content: flex-end; /* ボタンを右側に配置 */
+  justify-content: flex-end;
 }
 
 .review-form-content button {
@@ -487,6 +487,7 @@ footer {
 .user-image {
   width: 80px;
   height: 80px;
+  margin-right: 10px;
 }
 
 .underline {
