--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -418,7 +418,7 @@ footer {
   padding: 30px;
   border-radius: 8px;
   z-index: 1001;
-  width: 600px;
+  width: 60%;
 }
 
 .review-form.active {
@@ -536,4 +536,9 @@ footer {
 .delete-button {
   background-color: red;
   color: white;
+}
+
+/* レビュー削除 */
+.review-form-content p {
+  text-align: left;
 }
