--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -491,7 +491,10 @@ footer {
 }
 
 .underline {
-  border: 1px solid black;
+  border: none;
+  border-top: 1px solid black;
+  width: 100%;
+  margin: 0;
 }
 
 .review-list {
@@ -541,4 +544,40 @@ footer {
 /* レビュー削除 */
 .review-form-content p {
   text-align: left;
+}
+
+/* コミュニティ */
+.community {
+  width: 50%;
+}
+
+.comments-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.comment {
+  display: flex;
+  align-items: flex-start;
+}
+
+.comment-content {
+  flex-direction: column;
+  text-align: left;
+}
+
+.user-name {
+  font-weight: bold;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
