--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,8 +45,8 @@
       <% end %>
       <nav class="main-nav">
         <ul>
-          <li><a href="<%= new_user_session_path %>">ログイン</a></li>
-          <li><a href="<%= new_user_registration_path %>">新規登録</a></li>
+          <li><a href="<%= login_path %>">ログイン</a></li>
+          <li><a href="<%= new_user_path %>">新規登録</a></li>
         </ul>
       </nav>
       <div class="menu-icon" onclick="toggleMenu()">
