--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <div class="registration-form">
   <h2>新規登録</h2>
-  <%= form_with model: @user, url: signup_path, local: true do |form| %>
+  <%= form_with model: @user, url: new_user_path, local: true do |form| %>
     <div class="form-group">
-      <%= form.email_field :name, class: 'form-control', placeholder: '名前' %>
+      <%= form.text_field :name, class: 'form-control', placeholder: '名前' %>
     </div>
     <div class="form-group">
       <%= form.email_field :email, class: 'form-control', placeholder: 'メールアドレス' %>
