--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,8 +45,8 @@
       <% end %>
       <nav class="main-nav">
         <ul>
-          <li><%= link_to 'ログイン', login_path %></li>
-          <li><%= link_to '新規登録', new_user_path %></li>
+          <li><%= link_to 'ログイン', new_user_session_path %></li>
+          <li><%= link_to '新規登録', new_user_registration_path %></li>
         </ul>
       </nav>
       <div class="menu-icon" onclick="toggleMenu()">
