--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+<div class="registration-form">
+  <h2>新規登録</h2>
+  <%= form_with model: @user, url: user_registration_path, local: true do |form| %>
+    <div class="form-group">
+      <%= form.text_field :name, class: 'form-control', placeholder: '名前' %>
+      <% if @user.errors[:name].any? %>
+        <div class="error-message"><%= @user.errors[:name].join(", ") %></div>
+      <% end %>
+    </div>
+    <div class="form-group">
+      <%= form.email_field :email, class: 'form-control', placeholder: 'メールアドレス' %>
+      <% if @user.errors[:email].any? %>
+        <div class="error-message"><%= @user.errors[:email].first %></div>
+      <% end %>
+    </div>
+    <div class="form-group">
+      <%= form.password_field :password, class: 'form-control', placeholder: 'パスワード' %>
+      <% if @user.errors[:password].any? %>
+        <div class="error-message"><%= @user.errors[:password].join(", ") %></div>
+      <% end %>
+    </div>
+    <div class="form-group">
+      <%= form.password_field :password_confirmation, class: 'form-control', placeholder: 'パスワード確認' %>
+      <% if @user.errors[:password_confirmation].any? %>
+        <div class="error-message"><%= @user.errors[:password_confirmation].join(", ") %></div>
+      <% end %>
+    </div>
+    <div class="form-btn">
+      <%= form.submit '作成', class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
