--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,8 +59,9 @@
       <div class="close-icon" onclick="toggleMenu()">×</div>
       <ul>
         <li><%= link_to 'マイページ', root_path, class: 'menu-link' %></li>
-        <li><%= link_to 'お店を探す', root_path, class: 'menu-link' %></li>
-        <li><%= link_to 'みんなと話す', root_path, class: 'menu-link' %></li>
+        <li><%= link_to 'お店を探す', store_details_path, class: 'menu-link' %></li>
+        <li><%= link_to 'みんなと話す', community_path, class: 'menu-link' %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'menu-link' %></li>
       </ul>
     </div>
   </header>
