--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,80 +2,6 @@
 <html>
 <head>
   <title>Nearby Restaurants</title>
-  <style>
-    .container {
-      width: 100%; /* コンテナの幅を設定 */
-      margin-top: 10vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center; /* 中央揃え */
-    }
-    #map, #restaurants {
-      width: 60%; /* コンテナ内での幅を100%に設定 */
-      height: 20vh; /* 高さを小さく設定 */
-      border: 1px solid black;
-      border-radius: 8px;
-      box-sizing: border-box;
-      margin-bottom: 2vh;
-    }
-    #restaurants {
-      background-color: white;
-      overflow-y: auto;
-      padding: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center; /* 中央揃え */
-    }
-    .card {
-      background-color: #FFCC99;
-      width: 80%;
-      border: 1px solid black;
-      padding: 10px;
-      margin-bottom: 30px;
-      cursor: pointer;
-      border-radius: 8px;
-      display: flex;
-      align-items: flex-start; /* 上寄せ */
-    }
-    .card h3 {
-      font-size: 1.2em; /* 店舗名のフォントサイズを変更 */
-      text-decoration: underline; /* 下線を追加 */
-      margin-bottom: 10px;
-      margin-right: 10px; /* 画像との間隔を設定 */
-      height: 100%; /* カードの高さいっぱいに設定 */
-      text-align: left; /* 文字を左寄せ */
-    }
-    .card img {
-      flex: 1; /* 画像の幅を自動調整 */
-      max-width: 30%; /* 画像の最大幅を設定 */
-      height: auto; /* 高さを自動調整 */
-      border-radius: 8px; /* 画像の角を丸くする */
-      margin: 15px;
-    }
-    .card-content {
-      flex: 2; /* カード内容の幅を自動調整 */
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between; /* コンテンツを均等に配置 */
-    }
-    .card-content ul {
-      list-style-type: none;
-      padding: 0;
-      font-size: 0.9em; /* テキストサイズを変更 */
-      text-align: left; /* テキストを左寄せ */
-    }
-    .card-content ul li {
-      margin: 5px 0;
-      position: relative; /* 相対位置に変更 */
-      padding-left: 15px; /* 左側にスペースを追加 */
-    }
-    .card-content ul li::before {
-      content: '•'; /* 黒点を追加 */
-      position: absolute; /* 絶対位置 */
-      left: 0; /* 左端に配置 */
-      color: black; /* 黒色に設定 */
-    }
-  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&libraries=places,geometry&callback=initMap"></script>
   <script>
@@ -157,7 +83,8 @@
   </script>
 </head>
 <body>
-  <div class="container">
+  <div class="home-container">
+    <div id="flash-messages"></div>
     <div id="map"></div>
     <div id="restaurants"></div>
   </div>
