--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,16 @@
 body {
   background: #ffcc99;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.container {
+  flex: 1;
+  display: flex;
   justify-content: center;
-  text-align: center;
-  position: relative;
+  align-items: center;
 }
 
 .main-container {
@@ -70,9 +73,6 @@ button:hover {
   color: #000;
   padding: 10px 0;
   width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
   z-index: 1000;
 }
 
@@ -160,6 +160,7 @@ button:hover {
   cursor: pointer;
 }
 
+
 .hamburger-menu ul {
   list-style: none;
   padding: 20px;
@@ -184,14 +185,19 @@ button:hover {
 
 .menu-icon {
   cursor: pointer;
+  display: inline-block;
 }
 
 .menu-icon-bar {
   display: block;
   width: 25px;
   height: 3px;
-  margin: 4px 0;
+  margin: 5px auto;
   background-color: #333;
+}
+
+.hamburger-menu.open {
+  display: block;
 }
 
 /* フッダー */
@@ -269,9 +275,7 @@ footer {
 /* ログイン */
 .login-container {
   text-align: center;
-  width: 100%;
-  max-width: 400px;
-  margin: auto;
+  width: 50%;
   padding: 50px;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -468,9 +472,10 @@ footer {
   display: flex;
   align-items: flex-start;
   width: 900px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 20px;
   box-sizing: border-box;
+  border-radius: 10px;
   overflow-x: auto;
 }
 
