--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
         <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
       <% end %>
     </div>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
 
     <div class="overlay" data-review-form-target="overlay" data-action="click->review-form#close"></div>
