--- a/app/views/mypage/index.html.erb
+++ b/app/views/mypage/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="">マイページ</h2>
+<h2>マイページ</h2>
 <div class="mypage" data-controller="review-change">
   <div class="user-profile">
     <img src="<%= image_path('kkrn_icon_user_5.png') %>" alt="User Image" class="user-image">
