--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  flex: 6;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -422,12 +422,29 @@ footer {
 }
 
 /* 検索条件 */
+body {
+  background: #ffcc99;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+  box-sizing: border-box;
+}
+
 .sessions-container {
   text-align: center;
-  width: 100%;
-  max-width: 400px;
+  width: 500px;
   margin: auto;
-  padding: 50px;
+  padding: 40px;
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #fff;
@@ -435,18 +452,30 @@ footer {
 
 .sessions-form {
   display: flex;
-  margin-bottom: 10px;
+  flex-direction: column;
+  margin-bottom: 15px;
+  text-align: left;
 }
 
-.sessions-control {
+.sessions-form label {
+  margin-bottom: 0px;
+  font-weight: bold;
+}
+
+.form-control {
   width: 100%;
+  padding: 10px;
   border-radius: 5px;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  margin-top: 5px;
 }
 
 .sessions-btn {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  margin-top: 15px;
+  font-size: 24px;
 }
 
 .sessions-btn-primary {
@@ -460,6 +489,7 @@ footer {
   background-color: #82AD24;
   color: #fff;
   margin-top: 20px;
+  font-size: 16px;
 }
 
 .sessions-btn-primary:hover {
