--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,12 +6,16 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&libraries=places,geometry&callback=initMap"></script>
 <script>
   function initMap() {
+    var searchParams = <%= @search_params.to_json.html_safe %>;
+
     if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
         var currentLocation = {
           lat: position.coords.latitude,
           lng: position.coords.longitude
         };
+
+        var radius = parseInt(searchParams.walking_time) * 80; // 80 meters per minute
 
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 14,
@@ -21,7 +25,7 @@
         var service = new google.maps.places.PlacesService(map);
         service.nearbySearch({
           location: currentLocation,
-          radius: 1000,
+          radius: radius,
           type: ['restaurant']
         }, function(results, status) {
           if (status === google.maps.places.PlacesServiceStatus.OK) {
