--- a/app/views/store_details/_review.html.erb
+++ b/app/views/store_details/_review.html.erb
@@ -2,4 +2,7 @@
   <p>ユーザー名: <%= review.name %></p>
   <p class="review-text">テキスト: <%= review.review %></p>
   <p>評価: <%= review.rating %></p>
+  <p>サービス: <%= review.service %></p>
+  <p>価格: <%= review.price %></p>
+  <p>雰囲気: <%= review.atmosphere %></p>
 </div>
