--- a/app/views/mypage/index.html.erb
+++ b/app/views/mypage/index.html.erb
@@ -9,19 +9,21 @@
     <p>レビュー一覧</p>
     <hr class="underline">
     
-    <div class="review-item">
-      <img src="<%= image_path('kkrn_icon_user_5.png') %>" alt="Review Image" class="review-image">
-      <div class="review-content">
-        <p>店名</p>
-        <p>★★★★★</p>
-        <p class="review-text">テキストテキストテキスト</p>
+    <% @reviews.each do |review| %>
+      <div class="review-item">
+        <img src="<%= image_path('kkrn_icon_user_5.png') %>" alt="Review Image" class="review-image">
+        <div class="review-content">
+          <p><%= review.store_name %></p>
+          <p>★★★★★</p>
+          <p class="review-text"><%= review.review %></p>
+        </div>
+        <div class="review-summary">
+          <p>サービス : <%= review.service %></p>
+          <p>価格 : <%= review.price %></p>
+          <p>雰囲気 : <%= review.atmosphere %></p>
+        </div>
       </div>
-      <div class="review-summary">
-        <p>サービス : 非常に良い</p>
-        <p>価格 : 非常に良い</p>
-        <p>雰囲気 : 非常に良い</p>
-      </div>
-    </div>
+    <% end %>
 
     <div class="review-actions">
       <button data-action="click->review-change#open">編集</button>
