--- a/app/views/store_details/index.html.erb
+++ b/app/views/store_details/index.html.erb
@@ -27,7 +27,8 @@
 
   <div id="review-form" class="review-form" data-review-form-target="form">
     <div class="review-form-content">
-      <%= form_with model: Review.new, url: review_store_details_path, method: :post, remote: true, authenticity_token: true do |f| %>
+      <%= form_with(model: @review, url: review_store_details_path, local: true) do |f| %>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <div class="form-group">
           <%= f.label :name, '名前:' %>
           <%= f.text_field :name, id: 'name' %>
@@ -62,7 +63,7 @@
         </div>
         <div class="form-group">
           <button type="button" data-action="click->review-form#close">閉じる</button>
-          <%= f.submit '投稿する' %> <!-- ここに submit ボタンが存在することを確認します -->
+          <%= f.submit '投稿する' %>
         </div>
       <% end %>
     </div>
